# c-cxx-project-templates

./: LICENSE  README.md
c++-cmake-project/: CMakeLists.txt  README.md
c++-cmake-project/src/: example.cpp  example.hpp  main.cpp
c++-tup-project/: README.md  Tupfile
c++-tup-project/src/: example.cpp  example.hpp  main.cpp
c-makefile-project/: Makefile
c-makefile-project/src/: main.c
